Fix: Updated readme file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,12 @@
    "[typescript, javascript]": {
       "editor.formatOnSave": false
    },
+   "[python]": {
+      "editor.formatOnSave": true
+   },
    "editor.codeActionsOnSave": {
       "source.fixAll": true
    },
-   "prettier.printWidth": 999999
+   "prettier.printWidth": 999999,
+   "python.formatting.provider": "black"
 }
